# TAURI-autotruck-2026

./: index.html  package-lock.json  package.json
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  lib.rs  main.rs
src-tauri/src/indicator/: commands.rs  mod.rs  tcp.rs
src-tauri/src/server/: auth.rs  db.rs  error.rs  mod.rs
src-tauri/src/server/routes/: auth_routes.rs  catalog_routes.rs  config_routes.rs  mod.rs  reports_routes.rs  transit_routes.rs  users_routes.rs
src/context/: AuthContext.tsx  BusinessRulesContext.tsx  IndicatorStatusContext.tsx
src/features/admin/hooks/: useUsers.ts
src/features/admin/pages/: AdminPage.module.css  AdminPage.tsx
src/features/admin/services/: users.api.ts
src/features/admin/types/: admin.types.ts
src/features/auth/hooks/: useLoginForm.ts
src/features/auth/pages/: LoginPage.tsx
src/features/auth/services/: auth.service.ts
src/features/auth/types/: auth.types.ts
src/features/catalogs/api/: catalogs-crud.api.ts  catalogs-read.api.ts
src/features/catalogs/pages/: CatalogsPage.module.css  CatalogsPage.tsx
src/features/catalogs/types/: catalog.types.ts
src/features/operation/api/: api.config.ts  catalogs.api.ts  transit.api.ts
src/features/operation/hooks/: useCatalogLoader.ts  useOperationForm.ts  useOperationMode.ts  useScaleReading.ts  useTransitSearch.ts
src/features/operation/pages/: OperationPage.module.css  OperationPage.tsx  ReceiptPage.tsx
src/styles/: print.css  tokens.css
(+121 files in other folders)
